// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewUserTips should render correct for multiple elements 1`] = `
Array [
  <div>
    <table
      className="table"
    >
      <thead>
        <tr>
          <th>
            Business
          </th>
          <th>
            Neighborhood
          </th>
          <th>
            Shift
          </th>
          <th>
            Takehome
          </th>
          <th>
            Shift Length
          </th>
          <th>
            Shift Time
          </th>
          <th>
            Shift Date
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th>
            Poolinos
          </th>
          <th>
            Soho
          </th>
          <th>
            Busser
          </th>
          <th>
            87
          </th>
          <th>
            5
          </th>
          <th>
            PM
          </th>
          <th>
            04/30/2019
          </th>
        </tr>
      </tbody>
    </table>
  </div>,
  <div>
    <table
      className="table"
    >
      <thead>
        <tr>
          <th>
            Business
          </th>
          <th>
            Neighborhood
          </th>
          <th>
            Shift
          </th>
          <th>
            Takehome
          </th>
          <th>
            Shift Length
          </th>
          <th>
            Shift Time
          </th>
          <th>
            Shift Date
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th>
            Poolinos
          </th>
          <th>
            Soho
          </th>
          <th>
            Busser
          </th>
          <th>
            93
          </th>
          <th>
            6
          </th>
          <th>
            PM
          </th>
          <th>
            05/02/2019
          </th>
        </tr>
      </tbody>
    </table>
  </div>,
]
`;

exports[`ViewUserTips should render correct for single element 1`] = `
<div>
  <table
    className="table"
  >
    <thead>
      <tr>
        <th>
          Business
        </th>
        <th>
          Neighborhood
        </th>
        <th>
          Shift
        </th>
        <th>
          Takehome
        </th>
        <th>
          Shift Length
        </th>
        <th>
          Shift Time
        </th>
        <th>
          Shift Date
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th>
          Poolinos
        </th>
        <th>
          Soho
        </th>
        <th>
          Busser
        </th>
        <th>
          87
        </th>
        <th>
          5
        </th>
        <th>
          PM
        </th>
        <th>
          04/30/2019
        </th>
      </tr>
    </tbody>
  </table>
</div>
`;
